Backport mac fix for opensearch storage